Feat/alarm classification and notify channel (#1768)
* feat: initial alarm classification

* Feature/alarm (#1)

* refactor(common): remove ChartContainer in 'charts/utils' (#1676)

* fix: fix test report download (#1678)

* fix: fix k8s page style (#1677)

* fix: fix k8s page style

* fix: delete useless

* fix: fix yml edit error (#1680)

* fix(common): replace text-opacity-number with text-color-number (#1679)

* fix(msp): remove token-bgColor and change reset button style (#1668)

* fix(msp): remove token-bgColor and change reset button style

* fix(common): button to add a danger attribute

* chore: add module name in banner (#1675)

* fix(common): project cluster table data error (#1681)

* feat(msp): alarm

Co-authored-by: hujiahao-hjh <82502479+hujiahao-hjh@users.noreply.github.com>
Co-authored-by: zxj <782803291@qq.com>
Co-authored-by: wuhuiluo <48612739+wuhuiluo@users.noreply.github.com>
Co-authored-by: 随风 <daskyrk@users.noreply.github.com>

* WIP: umodify code about notify channels

* feat: adjust code

* feat: adjust notify channel

* feat: i18n

* fix: operattor is all

* fix: rebase master to remove duplicate code

* fix: mvalueOPtions is empty when edit

* feat: update accessKeysecret to password

* feat: udpdate i18n content

* refactor: refactor code

* refactor: remove console

* feat: modify style

* refactor: refactor code

Co-authored-by: Zero <mobius_pan@yeah.net>
Co-authored-by: hujiahao-hjh <82502479+hujiahao-hjh@users.noreply.github.com>
Co-authored-by: zxj <782803291@qq.com>
Co-authored-by: wuhuiluo <48612739+wuhuiluo@users.noreply.github.com>
Co-authored-by: 随风 <daskyrk@users.noreply.github.com>

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -135,6 +135,8 @@
     "The total number of selected resources": "The total number of selected resources",
     "Total": "Total",
     "Trend of cluster resources": "Trend of cluster resources",
+    "Trigger condition information is missing, please complete!": "Trigger condition information is missing, please complete!",
+    "Use must have root permissions to initialize the machine.": "users used to initialize the machine need to have root privileges",
     "VIP segment": "VIP segment",
     "VPC": "VPC",
     "VPC Label": "VPC Label",
@@ -146,6 +148,7 @@
     "Western United States": "Western United States",
     "Workload": "Workload",
     "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the organization through this link.": "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the company through this link",
+    "abnormal machine": "abnormal machine",
     "absolute path for local data storage": "absolute path for local data storage",
     "absolute path of mount point": "absolute path of mount point",
     "absolute path starts with /": "absolute path starts with /",
@@ -154,6 +157,7 @@
     "add Alibaba Cloud Container Service Cluster (Proprietary Version)": "add Alibaba Cloud Container Service Cluster (Proprietary Version)",
     "add alibaba cloud machine": "add alibaba cloud machine",
     "add analysis rule": "add analysis rule",
+    "add cloud resources": "add cloud resources",
     "add cluster": "add cluster",
     "add existing resources to build a cluster": "add existing resources to build a cluster",
     "add external user": "add external user",
@@ -175,6 +179,7 @@
     "alarm cluster": "alarm cluster",
     "alarm data report": "alarm data report",
     "alarm information": "alarm information",
+    "alarm level": "alarm level",
     "alarm name": "alarm name",
     "alarm rule": "alarm rule",
     "alarm status": "alarm status",
@@ -221,6 +226,8 @@
     "block network": "block network",
     "built-in templates": "built-in templates",
     "built-in templates tip": "built-in templates tip",
+    "by fixed bandwidth": "by fixed bandwidth",
+    "by flow": "by flow",
     "can't be the same as the data path": "can't be the same as the data path",
     "cannot be the same as the exec path": "cannot be the same as the exec path",
     "cannot contain restricted keywords": "cannot contain restricted keywords",
@@ -276,6 +283,7 @@
     "create Topic": "create Topic",
     "create analysis rule": "create analysis rule",
     "create announcement": "create announcement",
+    "create at least one notify strategy": "create at least one notify strategy",
     "create at least one rule": "create at least one rule",
     "create cluster": "create cluster",
     "create custom rule": "create custom rule",
@@ -324,6 +332,7 @@
     "extensive domain": "extensive domain",
     "extract method": "extract method",
     "extract result": "extract result",
+    "field": "field",
     "field rule": "field rule",
     "field rule alias cannot be repeated": "field rule alias cannot be repeated",
     "field rule alias is required": "field rule alias is required",
@@ -379,6 +388,8 @@
     "load balancing configuration": "load balancing configuration",
     "log content": "log content",
     "log filter": "log filter",
+    "local ssd": "local ssd",
+    "machine": "machine",
     "machine IP": "machine IP",
     "machine IP list": "machine IP list",
     "machine alarm": "machine alarm",
@@ -438,6 +449,7 @@
     "notice published": "released",
     "notice status": "status",
     "notice unpublished": "unpublished",
+    "notify strategy": "notify strategy",
     "number": "number",
     "number of Bucket": "number of Bucket",
     "number of VSW": "number of VSW",
@@ -513,6 +525,7 @@
     "please select node type": "please select node type",
     "please select operation type": "please select operation type",
     "please select specifications": "please select specifications",
+    "please select the corresponding value": "please select the corresponding value",
     "please select the label": "please select the label",
     "please use the following command to get the Secret information corresponding to the Service Account": "please use the following command to get the Secret information corresponding to the Service Account",
     "pod detail": "Pod detail",
@@ -629,6 +642,8 @@
     "total number of hosts": "total number of hosts",
     "total project resources": "total project resources",
     "total storage capacity": "total storage capacity",
+    "trigger conditions": "trigger conditions",
+    "trigger recover": "trigger recover",
     "trigger rules": "trigger rules",
     "type template": "type template",
     "unauthorized account (default)": "unauthorized account (default)",
@@ -684,6 +699,7 @@
     "batch authorize application": "batch authorize application",
     "batch set the role of member": "batch set the role of member",
     "can not be all spaces": "can not be all spaces",
+    "cannot contain spaces": "cannot contain spaces",
     "cancel copy": "cancel copy",
     "cancel cut": "cancel cut",
     "change setting": "change setting",
@@ -1950,6 +1966,7 @@
     "ajax interface": "ajax interface",
     "ajax performance trends": "ajax performance trends",
     "alarm history": "alarm history",
+    "alert": "alert",
     "all": "all",
     "all methods": "all methods",
     "allow access": "allow access",
@@ -2011,6 +2028,7 @@
     "blacklist": "blacklist",
     "blocking resource loading time": "blocking resource loading time",
     "branch call control": "branch call control",
+    "breakdown": "breakdown",
     "browse context": "browse context",
     "browse performance": "browse performance",
     "browser": "browser",
@@ -2110,6 +2128,7 @@
     "duration desc": "duration desc",
     "earlier": "earlier",
     "edit a endpoint": "edit a endpoint",
+    "emergency": "emergency",
     "enable daily report": "enable daily report",
     "enable rule": "enable rule",
     "enable weekly report": "enable weekly report",
@@ -2124,6 +2143,8 @@
     "entry domain name passthrough": "entry domain name passthrough",
     "environment entrance": "environment entrance",
     "environments": "environments",
+    "equal": "equal",
+    "error": "error",
     "error analysis": "error analysis",
     "error code": "error code",
     "error code and error ratio should be set at the same time": "error code and error ratio should be set at the same time",
@@ -2222,6 +2243,7 @@
     "latency": "latency",
     "later": "later",
     "latest news": "latest news",
+    "light": "light",
     "limit type": "limit type",
     "limited flow strategy": "limited flow strategy",
     "link information": "link information",
@@ -2234,6 +2256,7 @@
     "lowercase letters, numbers, dot, -, *": "lowercase letters, numbers, dot, -, *",
     "mail recipient": "Mail recipient",
     "manual registration": "manual registration",
+    "match": "match",
     "match the URL path prefix, and remove the prefix": "match the URL path prefix, and remove the prefix",
     "max time-consuming(ms)": "max time-consuming(ms)",
     "maximum concurrency": "maximum concurrency",
@@ -2269,6 +2292,8 @@
     "node traffic management": "node traffic management",
     "normal": "normal",
     "not activated": "not activated",
+    "not equal": "not equal",
+    "not match": "not match",
     "not satisfied": "not satisfied",
     "notification group management": "notification group management",
     "number of connection": "number of connection",
