--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -135,6 +135,8 @@
     "The total number of selected resources": "筛选项资源总和",
     "Total": "总计",
     "Trend of cluster resources": "集群资源变化趋势",
+    "Trigger condition information is missing, please complete!": "触发条件信息缺失，请补全!",
+    "Use must have root permissions to initialize the machine.": "用于初始化机器的用户，需要有 root 权限",
     "VIP segment": "VIP网段",
     "VPC": "专有网络",
     "VPC Label": "VPC 标签",
@@ -154,6 +156,7 @@
     "add Alibaba Cloud Container Service Cluster (Proprietary Version)": "添加阿里云容器服务集群（专有版）",
     "add alibaba cloud machine": "添加阿里云主机",
     "add analysis rule": "添加分析规则",
+    "add cloud resources": "添加云资源",
     "add cluster": "添加集群",
     "add existing resources to build a cluster": "添加已有资源自建集群",
     "add external user": "添加外部用户",
@@ -175,6 +178,7 @@
     "alarm cluster": "告警集群",
     "alarm data report": "告警数据报表",
     "alarm information": "告警信息",
+    "alarm level": "告警级别",
     "alarm name": "告警名称",
     "alarm rule": "告警规则",
     "alarm status": "告警状态",
@@ -221,6 +225,8 @@
     "block network": "封网",
     "built-in templates": "内置模板",
     "built-in templates tip": "可以套用内置模板来快速编辑分析规则",
+    "by fixed bandwidth": "按固定带宽",
+    "by flow": "按流量",
     "can't be the same as the data path": "不能和数据路径一致",
     "cannot be the same as the exec path": "不能和exec路径一样",
     "cannot contain restricted keywords": "不能包含限制关键字",
@@ -276,6 +282,7 @@
     "create Topic": "创建 Topic",
     "create analysis rule": "创建分析规则",
     "create announcement": "新建公告",
+    "create at least one notify strategy": "至少创建一个通知策略",
     "create at least one rule": "至少创建一条规则",
     "create cluster": "创建集群",
     "create custom rule": "创建自定义规则",
@@ -324,6 +331,7 @@
     "extensive domain": "泛域名",
     "extract method": "提取方式",
     "extract result": "提取结果",
+    "field": "字段",
     "field rule": "字段规则",
     "field rule alias cannot be repeated": "字段规则别名不能重复",
     "field rule alias is required": "字段规则别名必填",
@@ -377,8 +385,10 @@
     "letters and numbers, separated by hyphens, cannot be modified if confirmed": "字母数字，中间以中横线分隔，确定后无法修改",
     "library reference": "库引用",
     "load balancing configuration": "负载均衡配置",
+    "local ssd": "本地SSD",
     "log content": "日志内容",
     "log filter": "日志筛选",
+    "machine": "机器",
     "machine IP": "机器IP",
     "machine IP list": "机器IP列表",
     "machine alarm": "机器告警",
@@ -438,6 +448,7 @@
     "notice published": "已发布",
     "notice status": "状态",
     "notice unpublished": "未发布",
+    "notify strategy": "通知策略",
     "number": "数量",
     "number of Bucket": "Bucket数",
     "number of VSW": "交换机数量",
@@ -513,6 +524,7 @@
     "please select node type": "请选择节点类型",
     "please select operation type": "请选择操作类型",
     "please select specifications": "请选择规格",
+    "please select the corresponding value": "请输入对应值",
     "please select the label": "请选择标签",
     "please use the following command to get the Secret information corresponding to the Service Account": "请使用如下命令得到 Service Account 对应的 Secret 信息",
     "pod detail": "Pod 详情",
@@ -629,6 +641,8 @@
     "total number of hosts": "总主机数",
     "total project resources": "项目总资源",
     "total storage capacity": "总存储容量",
+    "trigger conditions": "触发条件",
+    "trigger recover": "触发恢复",
     "trigger rules": "触发规则定义",
     "type template": "类型模板",
     "unauthorized account (default)": "未授权账号（默认）",
@@ -684,6 +698,7 @@
     "batch authorize application": "批量授权应用",
     "batch set the role of member": "批量设置成员角色",
     "can not be all spaces": "不能全为空格",
+    "cannot contain spaces": "不能含有空格",
     "cancel copy": "取消复制",
     "cancel cut": "取消剪切",
     "change setting": "修改配置",
@@ -1950,6 +1965,7 @@
     "ajax interface": "Ajax接口",
     "ajax performance trends": "Ajax性能趋势",
     "alarm history": "告警历史",
+    "alert": "警告",
     "all": "全部",
     "all methods": "全部方法",
     "allow access": "允许访问",
@@ -2011,6 +2027,7 @@
     "blacklist": "黑名单",
     "blocking resource loading time": "阻塞资源加载耗时",
     "branch call control": "分支流量管控",
+    "breakdown": "故障",
     "browse context": "浏览上下文",
     "browse performance": "浏览性能",
     "browser": "浏览器",
@@ -2110,6 +2127,7 @@
     "duration desc": "耗时降序",
     "earlier": "更早",
     "edit a endpoint": "编辑流量入口",
+    "emergency": "紧急",
     "enable daily report": "开启日报",
     "enable rule": "开启规则",
     "enable weekly report": "开启周报",
@@ -2124,6 +2142,8 @@
     "entry domain name passthrough": "入口域名透传",
     "environment entrance": "环境入口",
     "environments": "环境",
+    "equal": "等于",
+    "error": "错误",
     "error analysis": "错误分析",
     "error code": "错误码",
     "error code and error ratio should be set at the same time": "错误码和错误比例需同时设置",
@@ -2222,6 +2242,7 @@
     "latency": "延时",
     "later": "更新",
     "latest news": "最新动态",
+    "light": "轻微",
     "limit type": "限制方式",
     "limited flow strategy": "限流策略",
     "link information": "链路信息",
@@ -2234,6 +2255,7 @@
     "lowercase letters, numbers, dot, -, *": "小写字母、数字、-、*、.",
     "mail recipient": "邮件接收人",
     "manual registration": "手动注册",
+    "match": "匹配",
     "match the URL path prefix, and remove the prefix": "匹配到URL路径前缀，同时移除前缀",
     "max time-consuming(ms)": "最大耗时(ms)",
     "maximum concurrency": "最大并发",
@@ -2269,6 +2291,8 @@
     "node traffic management": "节点流量管理",
     "normal": "正常",
     "not activated": "未启用",
+    "not equal": "不等于",
+    "not match": "不匹配",
     "not satisfied": "不满意",
     "notification group management": "通知组管理",
     "number of connection": "连接数",
