fix(msp): actively monitor related bugs

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2129,6 +2129,7 @@
     "earlier": "earlier",
     "edit a endpoint": "edit a endpoint",
     "emergency": "emergency",
+    "edit monitoring": "edit monitoring",
     "enable daily report": "enable daily report",
     "enable rule": "enable rule",
     "enable weekly report": "enable weekly report",
