feat: add i18n to set benchmark log in log context

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2184,6 +2184,7 @@
     "filter by registration type": "按注册类型过滤",
     "filter by service": "按服务过滤",
     "filter content": "过滤内容",
+    "filtered based on the labels of current benchmark log": "当前根据基准日志的标签进行的过滤",
     "find the authorization interface": "查找需授权接口",
     "first paint time": "白屏耗时",
     "first trigger": "第一次触发",
@@ -2430,6 +2431,7 @@
     "service registration list": "服务注册列表",
     "service routing prefix": "服务路由前缀",
     "set datum point": "设置基准点",
+    "set to benchmark log": "设置为基准日志",
     "shortest isolation time": "实例最短隔离时间",
     "show": "显示",
     "skip authentication": "跳过鉴权",
