--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2185,6 +2185,7 @@
     "filter by registration type": "filter by registration type",
     "filter by service": "filter by service",
     "filter content": "filter content",
+    "filtered based on the labels of current benchmark log": "filtered based on the labels of current benchmark log",
     "find the authorization interface": "find the authorization interface",
     "first paint time": "first paint time",
     "first trigger": "first trigger",
@@ -2431,6 +2432,7 @@
     "service registration list": "service registration list",
     "service routing prefix": "service routing prefix",
     "set datum point": "set datum point",
+    "set to benchmark log": "set to benchmark log",
     "shortest isolation time": "shortest isolation time",
     "show": "show",
     "skip authentication": "skip authentication",
