--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2110,6 +2110,8 @@
     "duration desc": "duration desc",
     "earlier": "earlier",
     "edit a endpoint": "edit a endpoint",
+    "emergency": "emergency",
+    "edit monitoring": "edit monitoring",
     "enable daily report": "enable daily report",
     "enable rule": "enable rule",
     "enable weekly report": "enable weekly report",
