--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2110,6 +2110,8 @@
     "duration desc": "耗时降序",
     "earlier": "更早",
     "edit a endpoint": "编辑流量入口",
+    "emergency": "紧急",
+    "edit monitoring": "编辑监控",
     "enable daily report": "开启日报",
     "enable rule": "开启规则",
     "enable weekly report": "开启周报",
