feat(msp): add no services guide
feat(msp): add no services guide

feat(msp): add no services guide

feat(msp): add no services guide

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2290,6 +2290,7 @@
     "no": "no",
     "no data": "no data",
     "no service": "no service",
+    "no service is connected currently, click the button below to access the service": "no service is connected currently, click the button below to access the service",
     "node list": "node list",
     "node traffic management": "node traffic management",
     "normal": "normal",
@@ -2364,6 +2365,7 @@
     "query history": "query history",
     "query records": "query records",
     "query syntax": "query syntax",
+    "quick access service": "quick access service",
     "real-time traffic": "real-time traffic",
     "receive data": "receive data",
     "redirect address": "redirect address",
