--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2289,6 +2289,7 @@
     "no": "否",
     "no data": "暂无数据",
     "no service": "暂无服务",
+    "no service is connected currently, click the button below to access the service": "当前未接入任何服务，点击下方按钮即可接入服务",
     "node list": "节点列表",
     "node traffic management": "节点流量管理",
     "normal": "正常",
@@ -2363,6 +2364,7 @@
     "query history": "查询历史",
     "query records": "查询记录",
     "query syntax": "查询语法",
+    "quick access service": "快速接入服务",
     "real-time traffic": "实时流量",
     "receive data": "接收数据",
     "redirect address": "重定向地址",
