fix(common): project quota field name rename

--- a/locales/en.json
+++ b/locales/en.json
@@ -33,6 +33,7 @@
     "Beijing": "Beijing",
     "Britain": "Britain",
     "CPU allocation": "CPU allocation",
+    "CPU limit": "CPU limit",
     "Chengdu": "Chengdu",
     "China": "China",
     "Cloud management": "Cloud management",
@@ -79,6 +80,7 @@
     "May": "May",
     "Members under the project/application associated with the current API can view it.": "members under the project/application associated with the current API can view",
     "Memory allocation": "Memory allocation",
+    "Memory limit": "Memory limit",
     "Middle-east & India": "Middle-east & India",
     "Mobile": "Mobile",
     "Model": "Model",
