--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -148,7 +148,6 @@
     "Western United States": "Western United States",
     "Workload": "Workload",
     "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the organization through this link.": "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the company through this link",
-    "abnormal machine": "abnormal machine",
     "absolute path for local data storage": "absolute path for local data storage",
     "absolute path of mount point": "absolute path of mount point",
     "absolute path starts with /": "absolute path starts with /",
@@ -786,6 +785,7 @@
     "please fill in the format correctly": "please fill in the format correctly",
     "please fill out": "please fill out",
     "please input": "please input",
+    "remaining quota": "remaining quota",
     "reference times": "reference times",
     "running cluster": "running cluster",
     "search by {name}": "search by {name}",
@@ -1595,6 +1595,7 @@
     "project info": "project info",
     "project level app": "project level app",
     "project member": "project member",
+    "project quota": "project quota",
     "project resource": "project resource",
     "project updated successfully": "project updated successfully",
     "project-level-app-form-tip": "after setting as a project-level application, the pipeline of the application can directly call the pipelines of other applications of the project",
