--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -785,6 +785,7 @@
     "please fill in the format correctly": "请正确填写格式",
     "please fill out": "请填写",
     "please input": "请键入",
+    "remaining quota": "剩余配额",
     "reference times": "引用次数",
     "running cluster": "运行集群",
     "search by {name}": "通过{name}搜索",
@@ -1594,6 +1595,7 @@
     "project info": "项目信息",
     "project level app": "项目级应用",
     "project member": "项目成员",
+    "project quota": "项目配额",
     "project resource": "项目资源",
     "project updated successfully": "更新项目成功",
     "project-level-app-form-tip": "设置为项目级应用后，该应用的流水线中直接可以调用项目其他应用的流水线",
