--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -135,7 +135,7 @@
     "The total number of selected resources": "The total number of selected resources",
     "Total": "Total",
     "Trend of cluster resources": "Trend of cluster resources",
-    "Trigger condition information is missing, please complete!": "Trigger condition information is missing, please complete!",
+    "Use must have root permissions to initialize the machine.": "users used to initialize the machine need to have root privileges",
     "VIP segment": "VIP segment",
     "VPC": "VPC",
     "VPC Label": "VPC Label",
@@ -163,6 +163,7 @@
     "add machine": "add machine",
     "add machine to cluster": "add machine to cluster",
     "add more notification groups": "add more notification groups",
+    "add notification object": "add notification object",
     "add rule": "add rule",
     "addon used": "addon used",
     "after-adding-key": "after adding the Alibaba Cloud key, you can quickly realize resource management based on Alibaba Cloud",
@@ -177,6 +178,7 @@
     "alarm level": "alarm level",
     "alarm name": "alarm name",
     "alarm rule": "alarm rule",
+    "alarm rule is missing, please complete!": "alarm rule is missing, please complete!",
     "alarm status": "alarm status",
     "alarm time": "alarm time",
     "alarm times trends": "alarm times trends",
@@ -315,6 +317,7 @@
     "eastern united states": "eastern united states",
     "ecs add trending": "ecs add trending",
     "ecs configuration": "ecs configuration",
+    "edit alarm strategy": "edit alarm strategy",
     "edit analysis rule": "edit analysis rule",
     "edit strategy": "edit strategy",
     "efficiency cloud": "efficiency cloud",
@@ -336,6 +339,7 @@
     "fill in up to 5 IPs": "最多填写5个IP",
     "fill-ip-split-enter": "please fill in the host/ip of the intranet of the cluster where the machine is located, separated by the enter key",
     "filter rule": "filter rule",
+    "filter rule information is missing, please complete!": "filter rule information is missing, please complete!",
     "fixed": "fixed",
     "for example, terminus-test": "e.g.：terminus-test",
     "forced offline": "forced offline",
@@ -413,6 +417,7 @@
     "network billing method": "network billing method",
     "network configuration": "network configuration",
     "new O & M dashboard": "new O & M dashboard",
+    "new alarm strategy": "new alarm strategy",
     "new cluster deployment": "new cluster deployment",
     "new connections per second": "new connections per second",
     "new dashboard": "new dashboard",
@@ -493,6 +498,7 @@
     "please enter a number greater than or equal to {min}": "please enter a number greater than or equal to {min}",
     "please enter an odd number no greater than {max}": "please enter an odd number no greater than {max}",
     "please enter bucket name": "please enter bucket name",
+    "please enter here": "please enter here",
     "please enter the cluster name to confirm offline": "please enter the cluster name to confirm offline",
     "please enter the correct port": "please enter the correct port",
     "please enter the log content first": "please enter the log content first",
@@ -579,6 +585,9 @@
     "search by container IP": "search by container IP",
     "search by content": "search by content",
     "select group": "select group",
+    "select label": "select label",
+    "select level": "select level",
+    "select notify method": "select notify method",
     "select project": "select project",
     "select resources": "select resources",
     "select the cluster type": "select the cluster type",
