--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -135,7 +135,7 @@
     "The total number of selected resources": "筛选项资源总和",
     "Total": "总计",
     "Trend of cluster resources": "集群资源变化趋势",
-    "Trigger condition information is missing, please complete!": "触发条件信息缺失，请补全!",
+    "Use must have root permissions to initialize the machine.": "用于初始化机器的用户，需要有 root 权限",
     "VIP segment": "VIP网段",
     "VPC": "专有网络",
     "VPC Label": "VPC 标签",
@@ -163,6 +163,7 @@
     "add machine": "添加机器",
     "add machine to cluster": "添加机器到集群",
     "add more notification groups": "添加更多通知组",
+    "add notification object": "添加通知对象",
     "add rule": "添加规则",
     "addon used": "addon已使用",
     "after-adding-key": "添加阿里云密钥后，即可快速实现基于阿里云资源管理",
@@ -177,6 +178,7 @@
     "alarm level": "告警级别",
     "alarm name": "告警名称",
     "alarm rule": "告警规则",
+    "alarm rule is missing, please complete!": "告警规则缺失，请补全!",
     "alarm status": "告警状态",
     "alarm time": "告警时间",
     "alarm times trends": "告警次数趋势",
@@ -315,6 +317,7 @@
     "eastern united states": "美国东部",
     "ecs add trending": "云主机添加趋势",
     "ecs configuration": "云主机配置",
+    "edit alarm strategy": "编辑告警策略",
     "edit analysis rule": "编辑分析规则",
     "edit strategy": "编辑策略",
     "efficiency cloud": "高效云盘",
@@ -336,6 +339,7 @@
     "fill in up to 5 IPs": "最多填写5个IP",
     "fill-ip-split-enter": "请填写机器所在集群内网的 Host/IP ，以回车键分隔",
     "filter rule": "过滤规则",
+    "filter rule information is missing, please complete!": "触发条件信息缺失，请补全!",
     "fixed": "固定",
     "for example, terminus-test": "例：terminus-test",
     "forced offline": "强制下线",
@@ -413,6 +417,7 @@
     "network billing method": "网络付费方式",
     "network configuration": "网络配置",
     "new O & M dashboard": "新建运维大盘",
+    "new alarm strategy": "新建告警策略",
     "new cluster deployment": "新增集群部署",
     "new connections per second": "每秒新建连接数",
     "new dashboard": "新建仪表盘",
@@ -493,6 +498,7 @@
     "please enter a number greater than or equal to {min}": "请输入大于等于{min}的数字",
     "please enter an odd number no greater than {max}": "请输入不大于{max}的奇数",
     "please enter bucket name": "请输入bucket名称",
+    "please enter here": "请在此输入",
     "please enter the cluster name to confirm offline": "请输入集群名确认下线",
     "please enter the correct port": "请输入正确的端口",
     "please enter the log content first": "请先输入日志内容",
@@ -579,6 +585,9 @@
     "search by container IP": "输入容器IP搜索",
     "search by content": "根据内容搜索",
     "select group": "选择群组",
+    "select label": "选择标签",
+    "select level": "选择级别",
+    "select notify method": "选择通知方式",
     "select project": "选择项目",
     "select resources": "选择资源",
     "select the cluster type": "请选择集群类型",
