refactor(common): table optimization

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -57,6 +57,7 @@
     "For editing members, setting member roles and role permissions, please refer to": "编辑成员，设置成员角色，相关角色权限请参考",
     "Frankfurt": "法兰克福",
     "Germany": "德国",
+    "Go to page": "前往页",
     "Group": "群组",
     "Hangzhou": "杭州",
     "Heyuan": "河源",
@@ -216,6 +217,7 @@
     "are you sure?": "是否确认？",
     "artifact ID": "制品 ID",
     "artifact management": "制品管理",
+    "ascend": "升序",
     "assert {name} setting is abnormal": "断言 {name} 设置异常",
     "associated ability": "关联通用能力",
     "associated microservice": "关联微服务",
@@ -262,6 +264,7 @@
     "can only contain letters, numbers, underscores and hyphens": "只能包含字母数字下划线和中划线",
     "can only contain numbers": "仅允许由数字组成",
     "cancel": "取消",
+    "cancel order": "取消排序",
     "cancelled by user": "用户取消",
     "cannot contain special characters": "不能包含特殊字符",
     "cannot exceed 40 characters": "不能超过40个字符",
@@ -388,6 +391,7 @@
     "deployment log": "部署日志",
     "deprecated": "已弃用",
     "deprecated version": "弃用版本",
+    "descend": "降序",
     "description": "描述",
     "design": "设计",
     "designated person": "处理人",
@@ -949,6 +953,7 @@
     "{num} month(s)": "{num}个月",
     "{num} year(s)": "{num}年",
     "{num} {type}": "{num}个{type}",
+    "{size} items / page": "{size} 条 / 页",
     "{specific} instance": "{specific}实例",
     "{total} item added successfully": "成功添加{total}条",
     "{unreadCount} messages unread": "共有 {unreadCount} 封未读站内信"
