fix: add mysql account switching status tip

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -136,7 +136,6 @@
     "Total": "Total",
     "Trend of cluster resources": "Trend of cluster resources",
     "Trigger condition information is missing, please complete!": "Trigger condition information is missing, please complete!",
-    "Use must have root permissions to initialize the machine.": "users used to initialize the machine need to have root privileges",
     "VIP segment": "VIP segment",
     "VPC": "VPC",
     "VPC Label": "VPC Label",
@@ -148,7 +147,6 @@
     "Western United States": "Western United States",
     "Workload": "Workload",
     "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the organization through this link.": "You can share the link to QQ, WeChat, DingTalk and other work groups, and colleagues can join the company through this link",
-    "abnormal machine": "abnormal machine",
     "absolute path for local data storage": "absolute path for local data storage",
     "absolute path of mount point": "absolute path of mount point",
     "absolute path starts with /": "absolute path starts with /",
@@ -157,7 +155,6 @@
     "add Alibaba Cloud Container Service Cluster (Proprietary Version)": "add Alibaba Cloud Container Service Cluster (Proprietary Version)",
     "add alibaba cloud machine": "add alibaba cloud machine",
     "add analysis rule": "add analysis rule",
-    "add cloud resources": "add cloud resources",
     "add cluster": "add cluster",
     "add existing resources to build a cluster": "add existing resources to build a cluster",
     "add external user": "add external user",
@@ -175,8 +172,6 @@
     "aggregator": "aggregator",
     "agile project": "agile project",
     "alarm": "alarm",
-    "alarm after recovery": "alarm after recovery",
-    "alarm cluster": "alarm cluster",
     "alarm data report": "alarm data report",
     "alarm information": "alarm information",
     "alarm level": "alarm level",
@@ -226,8 +221,6 @@
     "block network": "block network",
     "built-in templates": "built-in templates",
     "built-in templates tip": "built-in templates tip",
-    "by fixed bandwidth": "by fixed bandwidth",
-    "by flow": "by flow",
     "can't be the same as the data path": "can't be the same as the data path",
     "cannot be the same as the exec path": "cannot be the same as the exec path",
     "cannot contain restricted keywords": "cannot contain restricted keywords",
@@ -243,6 +236,7 @@
     "cloud account cannot be restored after deletion, confirm execution?": "cloud account cannot be restored after deletion, confirm execution?",
     "cloud database configuration": "cloud database configuration",
     "cloud resource overview": "cloud resource overview",
+    "cluster": "cluster",
     "cluster ID": "cluster ID",
     "cluster Token Management": "cluster Token Management",
     "cluster added successfully": "cluster added successfully",
@@ -332,7 +326,6 @@
     "extensive domain": "extensive domain",
     "extract method": "extract method",
     "extract result": "extract result",
-    "field": "field",
     "field rule": "field rule",
     "field rule alias cannot be repeated": "field rule alias cannot be repeated",
     "field rule alias is required": "field rule alias is required",
@@ -388,8 +381,6 @@
     "load balancing configuration": "load balancing configuration",
     "log content": "log content",
     "log filter": "log filter",
-    "local ssd": "local ssd",
-    "machine": "machine",
     "machine IP": "machine IP",
     "machine IP list": "machine IP list",
     "machine alarm": "machine alarm",
@@ -525,7 +516,6 @@
     "please select node type": "please select node type",
     "please select operation type": "please select operation type",
     "please select specifications": "please select specifications",
-    "please select the corresponding value": "please select the corresponding value",
     "please select the label": "please select the label",
     "please use the following command to get the Secret information corresponding to the Service Account": "please use the following command to get the Secret information corresponding to the Service Account",
     "pod detail": "Pod detail",
@@ -699,9 +689,9 @@
     "batch authorize application": "batch authorize application",
     "batch set the role of member": "batch set the role of member",
     "can not be all spaces": "can not be all spaces",
-    "cannot contain spaces": "cannot contain spaces",
     "cancel copy": "cancel copy",
     "cancel cut": "cancel cut",
+    "cannot contain spaces": "cannot contain spaces",
     "change setting": "change setting",
     "changes in the day": "changes in the day",
     "changes in the hour": "changes in the hour",
@@ -909,6 +899,7 @@
     "abandoned": "abandoned",
     "ability app": "ability app",
     "access control value": "access control value",
+    "account switching": "account switching",
     "activity log": "activity log",
     "actual value": "actual value",
     "add": "add",
@@ -1410,6 +1401,7 @@
     "mr-tpl-unit-test": "Unit testing（Note:unit testing must be able to run locally, in any environment, please mock or evade dependencies）",
     "must start with a letter or number": "must start with a letter or number",
     "my approval": "my approval",
+    "mysql addon account switching, please restart to take effect": "mysql addon account switching, please restart to take effect",
     "name is required": "name is required",
     "network configuration": "network configuration",
     "new": "new",
@@ -2128,8 +2120,8 @@
     "duration desc": "duration desc",
     "earlier": "earlier",
     "edit a endpoint": "edit a endpoint",
-    "emergency": "emergency",
     "edit monitoring": "edit monitoring",
+    "emergency": "emergency",
     "enable daily report": "enable daily report",
     "enable rule": "enable rule",
     "enable weekly report": "enable weekly report",
@@ -2145,7 +2137,6 @@
     "environment entrance": "environment entrance",
     "environments": "environments",
     "equal": "equal",
-    "error": "error",
     "error analysis": "error analysis",
     "error code": "error code",
     "error code and error ratio should be set at the same time": "error code and error ratio should be set at the same time",
@@ -2289,7 +2280,6 @@
     "next": "next",
     "no": "no",
     "no data": "no data",
-    "no service": "no service",
     "no service is connected currently, click the button below to access the service": "no service is connected currently, click the button below to access the service",
     "node list": "node list",
     "node traffic management": "node traffic management",
