--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -178,7 +178,7 @@
     "alarm level": "alarm level",
     "alarm name": "alarm name",
     "alarm rule": "alarm rule",
-    "alarm rule is missing, please complete!": "alarm rule is missing, please complete!",
+    "content of alarm rule is missing, please complete!": "content of alarm rule is missing, please complete!",
     "alarm status": "alarm status",
     "alarm time": "alarm time",
     "alarm times trends": "alarm times trends",
@@ -279,7 +279,7 @@
     "create Topic": "create Topic",
     "create analysis rule": "create analysis rule",
     "create announcement": "create announcement",
-    "create at least one notify strategy": "create at least one notify strategy",
+    "create at least one notification object": "create at least one notification object",
     "create at least one rule": "create at least one rule",
     "create cluster": "create cluster",
     "create custom rule": "create custom rule",
@@ -339,7 +339,7 @@
     "fill in up to 5 IPs": "最多填写5个IP",
     "fill-ip-split-enter": "please fill in the host/ip of the intranet of the cluster where the machine is located, separated by the enter key",
     "filter rule": "filter rule",
-    "filter rule information is missing, please complete!": "filter rule information is missing, please complete!",
+    "content of filter rule is missing, please complete!": "content of filter rule is missing, please complete!",
     "fixed": "fixed",
     "for example, terminus-test": "e.g.：terminus-test",
     "forced offline": "forced offline",
