--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -178,7 +178,7 @@
     "alarm level": "告警级别",
     "alarm name": "告警名称",
     "alarm rule": "告警规则",
-    "alarm rule is missing, please complete!": "告警规则缺失，请补全!",
+    "content of alarm rule is missing, please complete!": "告警规则内容缺失，请补全!",
     "alarm status": "告警状态",
     "alarm time": "告警时间",
     "alarm times trends": "告警次数趋势",
@@ -279,7 +279,7 @@
     "create Topic": "创建 Topic",
     "create analysis rule": "创建分析规则",
     "create announcement": "新建公告",
-    "create at least one notify strategy": "至少创建一个通知策略",
+    "create at least one notification object": "至少创建一个通知对象",
     "create at least one rule": "至少创建一条规则",
     "create cluster": "创建集群",
     "create custom rule": "创建自定义规则",
@@ -339,7 +339,7 @@
     "fill in up to 5 IPs": "最多填写5个IP",
     "fill-ip-split-enter": "请填写机器所在集群内网的 Host/IP ，以回车键分隔",
     "filter rule": "过滤规则",
-    "filter rule information is missing, please complete!": "过滤规则缺失，请补全!",
+    "content of filter rule is missing, please complete!": "过滤规则内容缺失，请补全!",
     "fixed": "固定",
     "for example, terminus-test": "例：terminus-test",
     "forced offline": "强制下线",
